--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -26,7 +26,7 @@ changelog:
       - '^docs:'
       - '^test:'
 brews:
-  - github:
+  - tap:
       owner: DavidWittman
       name: ec2-fuzzy
     folder: Formula
